<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <Button
        android:id="@+id/button2"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/edit_text_border"
        android:onClick="confirmOnClick"
        android:text="@string/tvSignIn"
        android:textColor="#E673EE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordSignIn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tvSignIn"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tvUnderText"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/etEmailSignIn"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/tfUsernameHint"
        android:inputType="textPersonName"
        android:lineSpacingExtra="10sp"
        android:singleLine="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etPasswordSignIn"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/tfPasswordHint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailSignIn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="128dp"
        android:layout_height="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/tvDoesntHaveAcc"
        android:textColor="#E673EE"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="40dp"
        android:layout_height="34dp"
        android:layout_marginStart="3dp"
        android:background="@android:color/transparent"
        android:onClick="sendToSingUp"
        android:text="@string/SignUp"
        android:textColor="#E673EE"
        android:textSize="10sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>